[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/controls/peep_hole_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/black-pixel.png" type="Texture" id=2]
[ext_resource path="res://assets/images/peep-hole-circle-gradient.png" type="Texture" id=3]

[node name="PeepHoleScreen" type="Node2D"]
light_mask = 0
script = ExtResource( 1 )
screen_opacity = 0.2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Node2D" type="Node2D" parent="CanvasLayer"]

[node name="TopLeft" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( -128, -128 )
scale = Vector2( 352, 352 )
texture = ExtResource( 2 )

[node name="TopMiddle" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( 128, -128 )
scale = Vector2( 256, 352 )
texture = ExtResource( 2 )

[node name="TopRight" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( 480, -128 )
scale = Vector2( 352, 352 )
texture = ExtResource( 2 )

[node name="MiddleLeft" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( -128, 128 )
scale = Vector2( 352, 256 )
texture = ExtResource( 2 )

[node name="Center" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
texture = ExtResource( 3 )

[node name="MiddleRight" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( 480, 128 )
scale = Vector2( 352, 256 )
texture = ExtResource( 2 )

[node name="BottomLeft" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( -128, 480 )
scale = Vector2( 352, 352 )
texture = ExtResource( 2 )

[node name="BottomMiddle" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( 128, 480 )
scale = Vector2( 256, 352 )
texture = ExtResource( 2 )

[node name="BottomRight" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0.2 )
light_mask = 0
position = Vector2( 480, 480 )
scale = Vector2( 352, 352 )
texture = ExtResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer/Node2D"]
